small base.less cleanup, profile picture spacing and resolution fixed

--- a/curiositymachine/static/less/pages/base.less
+++ b/curiositymachine/static/less/pages/base.less
@@ -758,7 +758,7 @@ margin-left: auto;
 
 ////profiles
 
-.mentor-info {
+.profile-info {
   .image-wrapper {
     img {
       width: 100%;
@@ -766,6 +766,8 @@ margin-left: auto;
   }
 
   img {
+    width: 100%;
+    height: auto;
     margin-bottom: 20px;
   }
 }
@@ -1084,7 +1086,7 @@ h2 a.btn:first-child {
 }
 
 ////========================
-//// filepicker
+//// EDP Comments
 
 .edp-comments {
 
@@ -1107,6 +1109,9 @@ h2 a.btn:first-child {
   color: #fff;
 }
 
+////========================
+//// other
+
 .avatar-container {
   display: inline-block;
   img {
@@ -1119,9 +1124,6 @@ h2 a.btn:first-child {
     margin-left: 10px;
   }
 }
-
-////========================
-//// other
 
 .preview-page-alerts a, .preview-page-alerts input {
   margin: 10px 10px 0;
